# openface

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Dockerfile  README.md  appveyor.yml  build_qt_gui.sh  clear.sh  compile.sh  compile_deps.sh  compile_openface.sh  download_libraries.ps1  download_models.cmd  download_models.sh  install.sh  prepare.sh  recompile.sh  run_extract_openface.py
BlinkCount/: BlinkCount.py  BlinkCount.spec
cmake/: OpenFaceConfig.cmake  OpenFaceConfig.cmake.in
cmake/modules/: FindOpenBLAS.cmake
exe/AUExtractor/: AUExtractor.cpp  CMakeLists.txt
exe/AuExtractionMQ/: AUstreamMQ.py  AuExtractionMQ.cpp  CMakeLists.txt
exe/FaceLandmarkImg/: CMakeLists.txt  FaceLandmarkImg.cpp  FaceLandmarkImg.vcxproj
exe/FaceLandmarkVid/: CMakeLists.txt  FaceLandmarkVid.cpp  FaceLandmarkVid.vcxproj
exe/FaceLandmarkVidMulti/: CMakeLists.txt  FaceLandmarkVidMulti.cpp  FaceLandmarkVidMulti.vcxproj
exe/FeatureExtraction/: CMakeLists.txt  FeatureExtraction.cpp  FeatureExtraction.vcxproj
exe/FeatureExtractionPython/: CMakeLists.txt  FeatureExtractionPython.cpp
exe/InMindDemo/: CMakeLists.txt
exe/InMindDemo/cmake/: FindZMQ.cmake
exe/InMindDemo/src/: main.cpp  multisense_server.cpp  multisense_server.h
exe/Recording/: Record.cpp  Recording.vcxproj
exe/cross-platform-gui/: CMakeLists.txt  OpenfaceWidget.cpp  OpenfaceWidget.h  main.cpp  render-thread.cpp  render-thread.h
gui/OpenFaceOffline/UI_items/: CameraSelection.xaml.cs
lib/local/CppInerop/: CppInerop.vcxproj  FaceAnalyserInterop.h  FaceDetectorInterop.h  GazeAnalyserInterop.h  OpenCVWrappers.h  RecorderInterop.h
lib/local/FaceAnalyser/: CMakeLists.txt  FaceAnalyser.vcxproj
lib/local/FaceAnalyser/include/: FaceAnalyser.h  FaceAnalyserParameters.h  Face_utils.h
lib/local/FaceAnalyser/src/: FaceAnalyser.cpp  FaceAnalyserParameters.cpp  PAW.cpp  PDM.cpp
lib/local/GazeAnalyser/: CMakeLists.txt  GazeAnalyser.vcxproj
lib/local/GazeAnalyser/include/: GazeEstimation.h
lib/local/InmindEmotionDetector/: CMakeLists.txt
lib/local/InmindEmotionDetector/include/: EmotionDetector.h  InmindEmotionDetector.h
lib/local/InmindEmotionDetector/src/: EmotionDetector.cpp  InmindEmotionDetector.cpp
lib/local/LandmarkDetector/: CMakeLists.txt  LandmarkDetector.vcxproj
lib/local/LandmarkDetector/include/: LandmarkDetectionValidator.h  LandmarkDetectorFunc.h  LandmarkDetectorModel.h  Patch_experts.h
lib/local/LandmarkDetector/src/: CCNF_patch_expert.cpp  LandmarkDetectorFunc.cpp  LandmarkDetectorModel.cpp  LandmarkDetectorParameters.cpp  LandmarkDetectorUtils.cpp  PAW.cpp  PDM.cpp  Patch_experts.cpp  SVR_patch_expert.cpp
lib/local/Utilities/: CMakeLists.txt  Utilities.vcxproj
lib/local/Utilities/include/: RecorderOpenFace.h  RecorderOpenFaceParameters.h  SequenceCapture.h
lib/local/Utilities/src/: ImageCapture.cpp  RecorderCSV.cpp  RecorderOpenFace.cpp  SequenceCapture.cpp  Visualizer.cpp
python/: CMakeLists.txt  README.md  detector.cpp  detector.hpp  pyopenface.cpp  test.py  tracker.cpp  tracker.hpp
python_api/: CMakeLists.txt
python_scripts/: PyOpenfaceVideo_tester.py  convert_to_torch.py  libPyOpenfaceVideo_tester.py
